--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,8 @@
 @use "./layaouts/wrap-highlights";
 @use "./layaouts/posts";
 @use "./layaouts/sidebar-mobile";
+@use "./layaouts/sidebar-tablet";
+@use "./layaouts/sidebar-desktop";
 
 // components
 @use "./components/botones";
