--- a/scss/base/_tipografias.scss
+++ b/scss/base/_tipografias.scss
@@ -5,8 +5,12 @@
 @use "./../utils/mixins" as mix;
 
 // Estilos de tipografias
-.category {
-  font-size: 0.8rem;
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+h1 {
+  font-size: 1.5rem;
   font-weight: 600;
-  color: var.$color-texto-secundario;
 }
